remove host and port from grafana and confluence user[GS6]
